Layout issues solved

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,7 +23,7 @@ h3 {
   margin-bottom: 0;
 }
 
-/* styles for tube dots */
+/* styles for tube span */
 .bakerloo {
   background-color: #B05F21;
 }
@@ -73,7 +73,7 @@ h3 {
   background-color: #66CC00;
 }
 
-/* status colour */
+/* changes status font colour */
 .statusbakerloo {
   color:#0C2BFF;
 }
@@ -120,10 +120,7 @@ h3 {
   color:#0C2BFF;
 }
 
-
-
-
-/* containers for tubes */
+/* lays out each tube div 1/3 width */
 .tube-bakerloo {
   float: left;
   width: 33%;
@@ -281,16 +278,13 @@ h3 {
 
 /* spacing for list */
 .list {
-  display: inline-block;
-  padding-bottom: 50px;
   padding-left: 10%;
-  width: 100%;
 }
 
 /* makes title align with dot */
 .tube-title {
   display: inline-block;
-  margin-bottom: 0;
+  margin-bottom: 1px;
 }
 
 /* Create 3 equal columns that floats next to each other */
